fix text size too small

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: Arial, Helvetica, sans-serif, Hack;
-    font-size: 12px;
     margin: 0;
     background: #eee;
     height: auto;
